# nam-java-bootstrapper

./: Cargo.toml  build.rs  readme.md
.github/workflows/: linux.yml  mac.yml  release.yml  windows.yml
src/: main.rs
