[package]
name = "nam-java-bootstrapper"
version = "0.2.1-rc"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*", features = ["backtrace"] }
open = "*"
walkdir = "*"

[build-dependencies]
winres = "*"